# PerceMon

./: .clang-format  .clang-tidy  .clangd  .cmake-format.json  .envrc.recommended  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CLAUDE.md  CMakeLists.txt  INSTALL.md  LICENSE  NOTES  README.md  TODO.md  azure-pipelines.yml  build-docs.sh  build.sh  codecov.yml  environment.yml  package.xml  pixi.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pypi.yml
ci/: compiler-tests.yml  unit-tests.yml
cmake/: FindGcov.cmake  FindLcov.cmake  Findcodecov.cmake  PerceMonConfig.cmake.in  code-coverage.cmake  llvm-cov-wrapper
csrc/: ast.cc  datastream.cc  fmt.cc  spatial.cc  stql_requirements.cc  topo.cc  utils.hpp
csrc/monitoring/: default_monitor.cc  evaluation.cc  horizon.cc  online_monitor.cc  stql_requirements.cc
doc/: CMakeLists.txt  DESIGN.md  STQL_MONITORING_ALGORITHM.md  TECHNICAL_DETAILS.md  TESTING.md  index.md
docs/: Doxyfile
examples/: CMakeLists.txt  python_example.py  test_permutations.cc
examples/mot17/: CMakeLists.txt  MOT17-03.csv  mot17_example.cc  mot17_helpers.cc  mot17_helpers.hpp
include/percemon/: ast.hpp  datastream.hpp  evaluation.hpp  exception.hh  fmt.hpp  iter.hpp  minmax.hh  monitoring.hpp  online_monitor.hpp  percemon.hpp  spatial.hpp  stql.hpp  stream.hpp  topo.hpp  utils.hpp
include/percemon/ast/: ast.hpp  fmt.hpp  functions.hpp  primitives.hpp  s4u.hpp  tqtl.hpp
include/percemon/fmt/: fmt.hpp  functions.hpp  primitives.hpp  s4u.hpp  tqtl.hpp
include/percemon/iter/: product.hpp
include/percemon2/: datastream.hpp  evaluation.hpp  monitoring.hpp  online_monitor.hpp  spatial.hpp  stql.hpp
include/stql/: stream.hh
include/stql/ast/: primitives.hh  primitives.hpp
python/: main.cpp
python/percemon/: __init__.pyi  main.cpp
python/percemon/bindings/: datastream_bindings.cpp  evaluation_bindings.cpp  monitoring_bindings.cpp  online_monitor_bindings.cpp  spatial_bindings.cpp  stql_bindings.cpp
scripts/: process_csv_robustness.py
src/: CMakeLists.txt  ast.cc  fmt.cc  topo.cc
src/monitoring/: default_monitor.cc  horizon.cc
tests/: CMakeLists.txt  __init__.py  conftest.py  percemon_tests.hpp  test_ast.cc  test_boolean_evaluation.cc  test_datastream.cc  test_datastream.py  test_monitoring.cc  test_monitoring.py  test_online_monitor.py  test_percemon.cc  test_spatial.cc  test_stql.cc  test_stql.py
