<?xml version="1.0"?>

<package format="3">
  <name>PerceMon</name>
  <version>0.1.0</version>
  <description>
    Online monitoring for perception systems using Spatio-Temporal Quality Logic.
  </description>
  <maintainer email="anandbala1597@gmail.com">
    Anand Balakrishnan
  </maintainer>
  <license>BSD 3-Clause</license>

  <url>https://github.com/anand-bala/PerceMon</url>

  <author email="anandbala1597@gmail.com">
    Anand Balakrishnan
  </author>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>git</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
